[CHG] Auswahl von Vorlagen für Einkäufe (Ticket 1861)

--- a/eq_quotation_enhancement/i18n/de.po
+++ b/eq_quotation_enhancement/i18n/de.po
@@ -38,6 +38,11 @@ msgid "Sales Order"
 msgstr "Verkaufsauftrag"
 
 #. module: eq_quotation_enhancement
+#: field:purchase.order,template_id:0
+msgid "Quote Template"
+msgstr "Vorlage"
+
+#. module: eq_quotation_enhancement
 #: field:sale.config.settings,default_template_id:0
 msgid "Default sale order template [eq_quotation_enhancement]"
 msgstr "Standard Angebotsvorlage [eq_quotation_enhancement]"
