[FIX] Übersetzung angepasst

--- a/equitania/i18n/de.po
+++ b/equitania/i18n/de.po
@@ -1332,7 +1332,7 @@ msgstr "Bestelldatum"
 #. module: equitania
 #: view:website:equitania.eq_external_layout_header_sale_order_data
 msgid "Order no."
-msgstr "Auftrags Nr."
+msgstr "Auftrag-Nr."
 
 #. module: equitania
 #: view:website:equitania.eq_external_layout_header_purchase_order_data
