[CHG] - Ticket 1700: Erweiterung für Suche über alle Adresstabellen

--- a/equitania/i18n/de.po
+++ b/equitania/i18n/de.po
@@ -266,6 +266,7 @@ msgstr "Bezeichnung"
 #: view:crm.lead:equitania.crm_case_form_view_oppor_ext
 #: view:crm.lead:equitania.crm_lead_form_ext
 #: view:res.partner:equitania.eq_partner_extension_form_view
+#: field:eq.address.search,city:0
 msgid "City"
 msgstr "Stadt"
 
@@ -888,6 +889,7 @@ msgstr "IBAN:"
 #: field:report.purchase.report_purchaseorder,id:0
 #: field:report.purchase.report_purchasequotation,id:0
 #: field:report.sale.report_saleorder,id:0
+#: field:eq.address.search,id:0
 #: field:report.stock.report_picking,id:0 field:sale_layout.category,id:0
 msgid "ID"
 msgstr "ID"
@@ -1381,6 +1383,7 @@ msgstr "Ansprechpartner"
 
 #. module: equitania
 #: view:website:equitania.report_invoice_data
+#: field:eq.address.search,phone:0
 #: view:website:equitania.report_purchasequotation_data
 #: view:website:equitania.report_purchaseorder_data
 #: view:website:equitania.report_saleorder_data
@@ -2598,3 +2601,42 @@ msgstr "Kundenreferenz:"
 #: view:website:equitania.report_invoice_data
 msgid "/ Order No:"
 msgstr "/ Auftrag-Nr:"
+
+#. module: equitania
+#: field:eq.address.search,eq_crm_lead_id:0
+msgid "Lead"
+msgstr "Interessent"
+
+#. module: equitania
+#: field:eq.address.search,name:0
+msgid "Name"
+msgstr "Name"
+
+#. module: equitania
+#: field:eq.address.search,eq_partner_id:0
+#: field:eq.address.search,res_partner:0
+msgid "Partner"
+msgstr "Kunde/Lieferant"
+
+#. module: equitania
+#: field:eq.address.search,zip:0
+msgid "Zip"
+msgstr "PLZ"
+
+#. module: equitania
+#: view:eq.address.search:equitania.eq_address_search_form_view
+#: view:eq.address.search:equitania.eq_address_search_tree_view
+#: view:eq.address.search:equitania.eq_address_search_view
+msgid "Address search"
+msgstr "Adressen"
+
+#. module: equitania
+#: model:ir.actions.act_window,name:equitania.action_address_search_form
+#: model:ir.ui.menu,name:equitania.menu_address_search_form
+msgid "Address Search"
+msgstr "Adressen"
+
+#. module: equitania
+#: field:eq.address.search,contact_name:0
+msgid "Contact name"
+msgstr "Partner"
