[ADD] - Änderungen bezügl. Attributwerte auskommentiert. - Unter Preislisten eine weitere Unterkategorie "Preislistenversionspositionen" hinzugefügt, welche alle Preislistenversionspositionen anzeigt. - Hier nun auch Gruppierung nach Preislistenversion, Produkte, Regelbezeichnung, Produkt-Vorlage und Produktkategorie.

--- a/equitania/i18n/de.po
+++ b/equitania/i18n/de.po
@@ -2667,3 +2667,9 @@ msgstr "Verkaufsteam"
 #: view:eq.product.select.case.section.wiz:equitania.eq_select_crm_case_section_wiz
 msgid "Change to lead"
 msgstr "In Chance umwandeln"
+
+#. module: equitania
+#: model:ir.actions.act_window,name:equitania.pricelistversionposition_action
+#: model:ir.ui.menu,name:equitania.pricelistversionposition_menu
+msgid "Pricelistversionsposition"
+msgstr "Preislistenversionspositionen"
