[CHG] Kundenreferenz und Auftragsnummer in der Rechnungsposition überarbeitet

--- a/equitania/i18n/de.po
+++ b/equitania/i18n/de.po
@@ -2637,8 +2637,8 @@ msgstr "Kundenreferenz:"
 
 #. module: equitania
 #: view:website:equitania.report_invoice_data
-msgid "/ Order No:"
-msgstr "/ Auftrag-Nr:"
+msgid "Order No:"
+msgstr "Auftrag-Nr:"
 
 #. module: equitania
 #: view:eq.address.search:equitania.eq_address_search_view
