--- a/eq_project_extension/i18n/de.po
+++ b/eq_project_extension/i18n/de.po
@@ -70,3 +70,12 @@ msgstr "false"
 msgid "oe_kanban_text_red"
 msgstr "oe_kanban_text_red"
 
+#. module: eq_project_extension
+#: view:account.analytic.line:eq_project_extension.eq_project_extension_view_account_analytic_line_filter
+msgid "Classification"
+msgstr "Klassifizierung"
+
+#. module: eq_project_extension
+#: view:account.analytic.line:eq_project_extension.eq_project_extension_view_account_analytic_line_tree
+msgid "Project Classification"
+msgstr "Projekt Klassifizierung"
