[ADD] - Durch das OCA-Modul "project_gtd" wurde das Schließen der Projektstufen verursacht, wenn keine Aufgaben darin enthalten sind. Dies wurde nun behoben. - Projekte können nicht mehr abgeschlossen werden, wenn nicht alle dazugehörigen Aufgaben entweder abgeschlossen oder abgebrochen sind. - Es ist nun nicht mehr möglich neue Aufgaben zu einem Projekt hinzuzufügen, wenn der Status des Projektes "Abgebrochen" oder "Erledigt" ist. - Ein Projekt, welches einen Status "Abgebrochen" oder "Erledigt" hat kann nicht mehr berarbeitet werden. - Es sind nun keine Änderungen an einer Aufgabe mehr möglich, sofern sich diese in der Phase "Erledigt" oder "Abgebrochen" befindet. - Eine Aufgabe kann nun nur noch mit dem Projektstatus "offen" innerhalb der Phasen verschoben werden.

--- a/eq_project_extension/i18n/de.po
+++ b/eq_project_extension/i18n/de.po
@@ -79,3 +79,29 @@ msgstr "Klassifizierung"
 #: view:account.analytic.line:eq_project_extension.eq_project_extension_view_account_analytic_line_tree
 msgid "Project Classification"
 msgstr "Projekt Klassifizierung"
+
+#. module: eq_project_extension
+#: code:addons/eq_project_extension/project.py:94
+#, python-format
+msgid "Error"
+msgstr "Fehlermeldung"
+
+#. module: eq_project_extension
+#: code:addons/eq_project_extension/project.py:94
+#, python-format
+msgid "The project is already closed or cancelled."
+msgstr "Das Projekt wurde bereits auf Erledigt oder Abgebrochen gesetzt."
+
+#. module: eq_project_extension
+#: code:addons/eq_project_extension/project.py:130
+#, python-format
+msgid "The task is already done or cancelled."
+msgstr "Die Aufgabe ist bereits Erledigt oder Abgebrochen."
+
+#. module: eq_project_extension
+#: code:addons/eq_project_extension/project_project.py:66
+#, python-format
+msgid "Edit cancelled. \n"
+"The project is already closed or cancelled."
+msgstr "Bearbeitung fehlgeschlagen. \n"
+"Das Projekt ist bereits geschlossen oder abgebrochen."
