[ADD] - Eine Aufgabe, welche "Erledigt" oder "Abgebrochen" ist kann nun zwischen den Phasen verschoben werden. - Anpassung der Projektbeschreibung

--- a/eq_project_extension/i18n/de.po
+++ b/eq_project_extension/i18n/de.po
@@ -105,3 +105,9 @@ msgid "Edit cancelled. \n"
 "The project is already closed or cancelled."
 msgstr "Bearbeitung fehlgeschlagen. \n"
 "Das Projekt ist bereits geschlossen oder abgebrochen."
+
+#. module: eq_project_extension
+#: code:addons/eq_project_extension/project.py:207
+#, python-format
+msgid "The project is already done or cancelled."
+msgstr "Das Projekt ist bereits Erledigt oder Abgeschlossen."
