--- a/equitania/i18n/de.po
+++ b/equitania/i18n/de.po
@@ -2745,13 +2745,8 @@ msgstr "Hierrüber bestimmen Sie den Zeitraum, in dem ein Angebot gültig ist, i
 
 #. module: equitania
 #: field:sale.config.settings,eq_offer_valid_duration:0
-msgid "Period for an valid offer in days"
-msgstr "Zeitraum in Tagen, in dem ein Angebot gültig ist,"
-
-#. module: equitania
-#: field:sale.config.settings,eq_offer_valid_duration:0
-msgid "Period for an valid offer in days"
-msgstr "Zeitraum in Tagen, in dem ein Angebot gültig ist"
+msgid "Period for an valid offer in days [equitania]"
+msgstr "Zeitraum in Tagen, in dem ein Angebot gültig ist [equitania]"
 
 #. module: equitania
 #: field:res.partner,eq_sale_quotation_count:0
