[CHG] Sales und Invoice Mailvorlagen DE und EN angepasst - Comments in readme Datei

--- a/equitania/email_templates/readme
+++ b/equitania/email_templates/readme
@@ -21,10 +21,14 @@ Invoice - Send by Email (Portal)_de.txt
 Invoice - Send by Email (Portal)_en.txt
 Invoice - Send by Email_de.txt
 Invoice - Send by Email_en.txt
-
+Sales Order - Send by Email_de.txt
+Sales Order - Send by Email_en.txt
+Sales Order - Send by Email (Online Quote)_de.txt
+Sales Order - Send by Email (Online Quote)_en.txt
+Sales Order - Send by Email (Portal)_de.txt
+Sales Order - Send by Email (Portal)_en.txt
 
 Nicht angepasste Vorlagen:
-
 Bestellung eingegangen_de.txt
 Bestellung eingegangen_en.txt
 Purchase Order - Send by Email_de.txt
