[ADD] - Unter dem Menüpunkt: "Abzurechnende Arbeitszeiten und Materialien" werden nun noch zusätzlich zwei Spalten zu dem Kunden und der dazugehörigen Kundennummer angezeigt.

--- a/eq_project_extension/i18n/de.po
+++ b/eq_project_extension/i18n/de.po
@@ -111,3 +111,13 @@ msgstr "Bearbeitung fehlgeschlagen. \n"
 #, python-format
 msgid "The project is already done or cancelled."
 msgstr "Das Projekt ist bereits Erledigt oder Abgeschlossen."
+
+#. module: eq_project_extension
+#: view:account.analytic.line:eq_project_extension.eq_project_extension_view_account_analytic_line_tree
+msgid "Customer"
+msgstr "Kunde"
+
+#. module: eq_project_extension
+#: view:account.analytic.line:eq_project_extension.eq_project_extension_view_account_analytic_line_tree
+msgid "Customer Number"
+msgstr "Kundennummer"
